test/arrays/ferguson/array-initialization-patterns/array-initialization-patterns-dists.replicated.good
array-initialization-patterns-dists.chpl:205: In function 'testr2':
array-initialization-patterns-dists.chpl:207: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:207: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
array-initialization-patterns-dists.chpl:284: In initializer:
array-initialization-patterns-dists.chpl:285: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:285: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
array-initialization-patterns-dists.chpl:301: In function 'testC4':
array-initialization-patterns-dists.chpl:303: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:303: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
array-initialization-patterns-dists.chpl:340: In initializer:
array-initialization-patterns-dists.chpl:341: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:341: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
array-initialization-patterns-dists.chpl:357: In function 'testR4':
array-initialization-patterns-dists.chpl:359: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:359: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
